Olkhovyk_Julia/lab5/main.tf
/*
terraform/rds.tf contains all the necessary resources to
setup the VPC and an EKS application

Resources:
- Virtual Private Cloud
- EKS kubernetes cluster
*/

provider "aws" {
    region  = var.region
    access_key = var.access-key
    secret_key = var.secret-key
}

terraform {
  required_version = "> 0.14.0"
}

data "aws_eks_cluster" "cluster" {
    name = module.eks.cluster_id
}

data "aws_eks_cluster_auth" "cluster" {
  name = module.eks.cluster_id
}

data "aws_availability_zones" "available" {
}

resource "aws_security_group" "worker_group_mngmnt_one" {
  name_prefix = "worker_group_mngmnt_one"
  vpc_id = module.vpc.vpc_id
  
  ingress {
    cidr_blocks = [ "10.0.0.0/8" ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  } 
}

resource "aws_security_group" "all_worker_mngmnt" {
  name_prefix = "all_worker_mngmnt"
  vpc_id      = module.vpc.vpc_id

  ingress {
      from_port = 22
      to_port   = 22
      protocol = "tcp"

      cidr_blocks = [
          "10.0.0.0/8",
          "172.16.0.0/12",
          "192.168.0.0/16"
      ]
  }
}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "2.6.0"

  name                 = "my-vpc"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  private_subnets      = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24"]
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_nat_gateway   = true
  single_nat_gateway   = true
  enable_dns_hostnames = true

  public_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}"   = "shared"
    "kubernetes.io/role/elb"                      = "1"
  }

  private_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}"   = "shared"
    "kubernetes.io/role/internal-elb"             = "1"
  }
}

module "eks" {
    source                          = "terraform-aws-modules/eks/aws"
    version                         = "12.2.0"
    cluster_name                    = var.cluster_name
    cluster_version                 = "1.17"
    subnets                         = module.vpc.private_subnets
    cluster_create_timeout          = "1h"
    cluster_endpoint_private_access = true
    vpc_id = module.vpc.vpc_id

    worker_groups = [
      {
        name = "worker-group"
        instance_type = "t2.small"
        additional_userdata = "echo foo bar"
        asg_desired_capacity = 1
        additional_security_group_id = [aws_security_group.worker_group_mngmnt_one.id]
      }
    ]

}

provider "kubernetes" {
    host = data.aws_eks_cluster.cluster.endpoint
    cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
    token = data.aws_eks_cluster_auth.cluster.token
    load_config_file = false
    version = "~>1.11"
}


resource "kubernetes_deployment" "stepik-teachers" {
  metadata {
    name      = "stepik-teachers"
  }
  spec {
    replicas = 2
    selector {
      match_labels = {
        app = "stepik-teachers"
      }
    }
    template {
      metadata {
        labels = {
          app = "stepik-teachers"
        }
      }
      spec {
        container {
          image = "juliaolkhovyk/stepik-teachers:latest"
          name  = "stepik-teachers"
          port {
            container_port = 3000
          }
        }
      }
    }
  }
}


resource "kubernetes_service" "stepik-teachers" {
  metadata {
    name      = "stepik-teachers"
  }
  spec {
    selector = {
      app = "stepik-teachers"
    }
    type = "LoadBalancer"
    port {
      port        = 8888
      target_port = 3000
    }
  }
}
